grammar.txt
STATEMENT -> NUMBER RESERVED_WORD

RESERVED_WORD -> REM 
               | INPUT
               | LET 
               | PRINT
               | GOTO
               | IF
               | END

REM -> DISCARD lf
DISCARD -> * DISCARD | $

INPUT -> input ID
LET   -> let ID = ALGEBRA_EXPR
PRINT -> print ID
GOTO  -> goto NUMBER
IF    -> if BOOLEAN_EXPR GOTO
END   -> end

ID     -> [a .. z]
NUMBER -> [-9999 .. 9999]

OPERAND -> NUMBER | ID

ALGEBRA_EXPR     -> OPERAND ALGEBRA_OPERATOR OPERAND
ALGEBRA_OPERATOR -> + | - | * | / | %

BOOLEAN_EXPR     -> OPERAND BOOLEAN_OPERATOR OPERAND
BOOLEAN_OPERATOR -> == | != | < | > | <= | >=
